# LP_MP-QAP

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: equality_message.hxx  graph_matching.h  graph_matching_constructor.hxx  graph_matching_input.h  graph_matching_local_problem.hxx  min_cost_flow_factor_ssp.hxx  multigraph_matching.hxx  multigraph_matching_consistency_constraint.hxx  multigraph_matching_constructor.hxx  multigraph_matching_input.h
src/: CMakeLists.txt  convert_to_hdf5.cpp  generate_solvers.py  graph_matching_gm_left.cpp  graph_matching_gm_left_tightening.cpp  graph_matching_gm_proximal_bundle.cpp  graph_matching_gm_proximal_bundle_left.cpp  graph_matching_gm_right.cpp  graph_matching_gm_right_tightening.cpp  graph_matching_hungarian_bp_both_sides.cpp  graph_matching_hungarian_bp_both_sides_tightening.cpp  graph_matching_hungarian_bp_left.cpp  graph_matching_hungarian_bp_left_tightening.cpp  graph_matching_hungarian_bp_right.cpp  graph_matching_hungarian_bp_right_tightening.cpp  graph_matching_input.cpp  graph_matching_local_subproblems_left.cpp  graph_matching_local_subproblems_proximal_bundle_left.cpp  graph_matching_mcf_both_sides.cpp  graph_matching_mcf_both_sides_tightening.cpp  graph_matching_mcf_conic_bundle.cpp  graph_matching_mcf_left.cpp  graph_matching_mcf_left_tightening.cpp.cpp  graph_matching_mcf_proximal_bundle.cpp  graph_matching_mcf_proximal_bundle_left.cpp  graph_matching_mcf_right.cpp  graph_matching_mcf_right_tightening.cpp.cpp  graph_matching_mp_both_sides.cpp  graph_matching_mp_both_sides_tightening.cpp  (+34 more)
(+2 files in other folders)
